<resources>
    <string name="app_name">eHeart BP</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="Empezar">Empezar</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="measurement">BLOOD PRESSURE MEASUREMENT</string>
    <string name="capture">Capture</string>
    <string name="results">RESULTS</string>
    <string name="obtain">OBTAIN</string>
    <string name="get_pressure">Get Pressure</string>
    <string name="record">Record</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="close_session">Close Session</string>
    <string name="contacts">Contacts</string>
    <string name="alerts">Alerts</string>
    <string name="device">Device</string>
    <string name="date">Fecha</string>
    <string name="Sample">Fecha de Muestra</string>
    <string name="risk_prediction">Health risk score</string>
</resources>
