<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ViewMeasurementActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="186dp"
        android:layout_height="175dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/measurement"
        android:textColor="#979797"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="146dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="Néstor Bolívar"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/montserrat"
        android:text="Noviembre 19 de 2018"
        android:textColor="?attr/colorAccent"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat"
        android:text="1:43 PM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/results"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Sample"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Sample"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <View
        android:id="@+id/divider"
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="8dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/medida" />


    <TextView
        android:id="@+id/editPul"
        android:layout_width="85dp"
        android:layout_height="67dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="230dp"
        android:cursorVisible="false"
        android:fontFamily="@font/roboto_medium"
        android:text="66"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4" />

    <TextView
        android:id="@+id/editDia"
        android:layout_width="85dp"
        android:layout_height="67dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="115dp"
        android:cursorVisible="false"
        android:fontFamily="@font/roboto_medium"
        android:text="80"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4" />

    <TextView
        android:id="@+id/editSys"
        android:layout_width="85dp"
        android:layout_height="67dp"
        android:layout_marginBottom="24dp"
        android:cursorVisible="false"
        android:fontFamily="@font/roboto_medium"
        android:text="120"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4" />


</android.support.constraint.ConstraintLayout>